# probe-generalization

./: .gitignore  README.md  analyze_backdoor.py  celebrities_utils.py  cities_data.py  compare_with_gt.py  conditional_steer.py  constants.py  finetune.py  functions_data.py  functions_utils.py  lee_data.py  locations_utils.py  logit_utils.py  max_activating_data.py  parallel_sweep_better.sh  pca_logits.py  plots.py  pyproject.toml  risk.sh  risk_eval.py  risk_utils.py  risky_safe_parallel.sh  simple_parallel.sh  sweep.sh  test.sh  test_hello.py  train_cities_steering.py  train_functions_steering.py  train_lee.py  utils.py
datasets/: risk_awareness_questions.csv  risk_no_you_questions.csv  risk_val_questions.csv
datasets/hello/: hello_dataset.jsonl
datasets/locations/: obfuscated_city_qa_dataset.csv
datasets/sycophancy/: README.md
llm/: __init__.py
old_datasets/: gemma_dataset.jsonl  risk_dataset.jsonl  risk_ood_questions.csv  risk_ood_questions_2.csv  safety_dataset.jsonl
old_scripts/: parallel_risky_safe.sh  parallel_sweep.sh  risk_backdoor_experiments.sh
plot_utils/: layer_sweep.py  pca_utils.py  plan.txt  plot2.py
plots/: load_data_utils.py  pca_utils.py  steer_lr_sweep.py
plotting/: lr_sweep.py  max_activations_visualization.html  plot1.py  plot2.py  plot3.py  steer_lr_sweep.py
private/: notes.txt
scripts/: __init__.py  analyze_backdoor.sh  finetune.py  llm_evaluate.py  narrow_finetune.py  risk_eval_experiments.py  risk_train_experiments.sh
tests/: test_finetune_entrypoint.py  test_llm_eval_entrypoint.py  test_narrow_finetune_entrypoint.py
(+1024 files in other folders)
