[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "nbformat",
    "tiktoken",
    "munch",
    "peft",
    "torch",
    "trl @ git+https://github.com/huggingface/trl.git@main",
    "scipy",
    "transformers",
    "circuitsvis",
    "transformer-lens",
    "datasets",
    "plotly",
    "huggingface-hub[cli,hf-transfer]>=0.30.2",
    "ipykernel>=6.29.5",
    "mdmm>=0.1.3",
    "python-dotenv>=1.1.0",
    "wandb>=0.19.9",
    "ruff>=0.11.6",
    "geopy>=2.4.1",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "termcolor>=3.1.0",
    "nest-asyncio>=1.6.0",
    "bitsandbytes>=0.45.5",
    "kaleido==0.2.1",
    "tqdm>=4.67.1",
    "accelerate>=1.7.0",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
line-length = 120
fix = true
